25Oct00=======================================================================
1. fix catchup and uncatchup commands so that they accept ranges
24Oct00=======================================================================
1. added cty.dat from http://www.k1ea.com/cty/index.htm to the prefix_data.pl
data file and modified create_prefix.pl accordingly.
2. the 'no text line' messages should now propagate correctly
3. added the dxcc, itu and cq zone numbers for announcer and origining node 
on announce filters - see the /spider/filter/ann/*.issue files for more info.
4. you can now specify a 'user_default.pl', 'node_default.pl' and 
'in_node_default.pl' in each of the filter directories
23Oct00=======================================================================
1. Added K5K as Kingman Reef
1. Added K7K as Kure
17Oct00=======================================================================
1. force frames to go down the local interface when doing a route. This is 
particularly important for pings!
16Oct00=======================================================================
1. add a ':' after 'G7BRN de G1TLH' in a talk message.
2. added /J to the list of things to ignore (as in G1TLH/J) in prefix 
processing (ie /J mean Jota not /JA [Japan]).
3. change all INCOMING 00-08 0A-1F and 9B characters that make it past the
intermediate client->server protocol to '.'.
04Sep00=======================================================================
1. made PC10,11,12 badword checking dependant on a flag variable ($censorpc)
default = 0 (off).
02Sep00=======================================================================
1. fix a long standing talk bug to do with routing to specific nodes (t xxx >
yyy .....)
2. Add badwords checking in various places. You put a list of words into
/spider/data/badwords one or several per line. Lines starting with # are
ignored. PC10, PC11, PC12 with words contained in this file will not be